This aims for maximum readability in a given subterm.
INCOMPATIBILITY.

* Some old and rarely used ASCII replacement syntax has been removed.
INCOMPATIBILITY, standard syntax with symbols should be used instead.
The subsequent commands help to reproduce the old forms, e.g. to
simplify porting old theories:

  type_notation Map.map  (infixr "~=>" 0)
  notation Map.map_comp  (infixl "o'_m" 55)

* Case combinator "prod_case" with eta-contracted body functions
has explicit "uncurry" notation, to provide a compact notation while
getting ride of a special case translation.  Slight syntactic
INCOMPATIBILITY.

* Theory Map: lemma map_of_is_SomeD was a clone of map_of_SomeD and has
been removed. INCOMPATIBILITY.

* Quickcheck setup for finite sets.

* Discontinued simp_legacy_precond. Potential INCOMPATIBILITY.

* Sledgehammer:
  - Proof reconstruction has been improved, to minimize the incidence of
    cases where Sledgehammer gives a proof that does not work.
  - Auto Sledgehammer now minimizes and preplays the results.
  - Handle Vampire 4.0 proof output without raising exception.
  - Eliminated "MASH" environment variable. Use the "MaSh" option in
    Isabelle/jEdit instead. INCOMPATIBILITY.

* Nitpick:
  - Removed "check_potential" and "check_genuine" options.

* New commands lift_bnf and copy_bnf for lifting (copying) a BNF structure
  on the raw type to an abstract type defined using typedef.

* Division on integers is bootstrapped directly from division on
naturals and uses generic numeral algorithm for computations.
Slight INCOMPATIBILITY, simproc numeral_divmod replaces and generalizes
former simprocs binary_int_div and binary_int_mod

* Tightened specification of class semiring_no_zero_divisors.  Slight
INCOMPATIBILITY.

* Class algebraic_semidom introduces common algebraic notions of
integral (semi)domains, particularly units.  Although
logically subsumed by fields, is is not a super class of these