@@ -209,6 +209,10 @@ simplify porting old theories:
   type_notation Map.map  (infixr "~=>" 0)
   notation Map.map_comp  (infixl "o'_m" 55)
 
+* The alternative notation "\<Colon>" for type and sort constraints has been
+removed: in LaTeX document output it looks the same as "::".
+INCOMPATIBILITY, use plain "::" instead.
+
 * Case combinator "prod_case" with eta-contracted body functions
 has explicit "uncurry" notation, to provide a compact notation while
 getting ride of a special case translation.  Slight syntactic
